Fix CI failures for v0.1.1
- Add event handler type aliases to fix clippy type_complexity warnings
- Add Linux system dependencies (libgtk-3-dev, libglib2.0-dev) to CI
- Fix publish workflow to publish windjammer-ui-macro first
- Add pre-commit hooks (.pre-commit-config.yaml, .githooks/pre-commit)
- Remove unused app_reactive_old.rs
- Fix manual_clamp warning in progress component
- Bump version to 0.1.1

Fixes:
- Type complexity warnings for event handlers
- Missing glib-2.0 system dependencies on Linux
- Publish order (windjammer-ui-macro must be published before windjammer-ui)

Signed-off-by: Jeffrey Friedman <20387583+jeffreyfriedman@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,13 +66,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Install Linux system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libglib2.0-dev
+      
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
       
       - name: Run tests before publish
         run: cargo test --all-features
       
-      - name: Publish to crates.io
+      - name: Publish windjammer-ui-macro first
+        run: cargo publish --token ${{ secrets.CARGO_TOKEN }} -p windjammer-ui-macro
+        continue-on-error: true  # May already be published
+      
+      - name: Wait for crates.io to index
+        run: sleep 30
+      
+      - name: Publish windjammer-ui
         run: cargo publish --token ${{ secrets.CARGO_TOKEN }}
         continue-on-error: false
 
