--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,14 @@ jobs:
           toolchain: ${{ matrix.rust }}
           components: rustfmt, clippy
       
+      - name: Install Windjammer CLI
+        shell: bash
+        run: |
+          echo "📦 Installing Windjammer CLI (wj)..."
+          cargo install windjammer --version 0.36.0
+          echo "✅ Windjammer CLI installed"
+          wj --version
+      
       - name: Generate Cargo.lock if missing
         shell: bash
         run: cargo generate-lockfile
@@ -93,6 +101,12 @@ jobs:
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      
+      - name: Install Windjammer CLI
+        run: |
+          echo "📦 Installing Windjammer CLI (wj)..."
+          cargo install windjammer --version 0.36.0
+          echo "✅ Windjammer CLI installed"
       
       - name: Install tarpaulin
         run: cargo install cargo-tarpaulin
@@ -149,6 +163,12 @@ jobs:
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+      
+      - name: Install Windjammer CLI
+        run: |
+          echo "📦 Installing Windjammer CLI (wj)..."
+          cargo install windjammer --version 0.36.0
+          echo "✅ Windjammer CLI installed"
       
       - name: Cache Cargo registry and build artifacts
         uses: actions/cache@v4
