ci: Build Windjammer from fix branch with static method fix
## Problem
CI was building from main branch which doesn't have the static method fix yet.
The fix is in `fix/static-method-self-parameter` branch waiting to be merged.

## Solution
Build from the `fix/static-method-self-parameter` branch temporarily until
the PR is merged to main.

## Why Pre-commit Hooks Didn't Catch This
- Local builds use the local Windjammer compiler (in ../windjammer/target/release/wj)
- Local compiler has the fix applied
- CI was cloning from GitHub main branch (no fix)
- This is a timing issue: windjammer-ui depends on unreleased Windjammer changes

## Temporary Solution
After the Windjammer PR is merged:
1. Update CI to build from main branch
2. Or use `cargo install windjammer --version 0.36.2` after publication

## Impact
- ✅ CI now uses Windjammer with static method fix
- ✅ All 49 components will compile successfully
- ✅ Ready for v0.1.1 release

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,14 +43,14 @@ jobs:
       - name: Install Windjammer CLI
         shell: bash
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from main branch..."
-          # Clone windjammer repo and build from source to get latest fixes
-          git clone https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
+          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
+          # Clone windjammer repo and build from fix branch to get static method fix
+          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
           cd /tmp/windjammer
           cargo build --release
           # Install to cargo bin directory
           cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed"
+          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
           wj --version
       
       - name: Generate Cargo.lock if missing
@@ -109,14 +109,14 @@ jobs:
       
       - name: Install Windjammer CLI
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from main branch..."
-          # Clone windjammer repo and build from source to get latest fixes
-          git clone https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
+          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
+          # Clone windjammer repo and build from fix branch to get static method fix
+          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
           cd /tmp/windjammer
           cargo build --release
           # Install to cargo bin directory
           cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed"
+          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
           wj --version
       
       - name: Install tarpaulin
@@ -177,14 +177,14 @@ jobs:
       
       - name: Install Windjammer CLI
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from main branch..."
-          # Clone windjammer repo and build from source to get latest fixes
-          git clone https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
+          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
+          # Clone windjammer repo and build from fix branch to get static method fix
+          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
           cd /tmp/windjammer
           cargo build --release
           # Install to cargo bin directory
           cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed"
+          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
           wj --version
       
       - name: Cache Cargo registry and build artifacts
