ci: Use published Windjammer v0.36.2 from crates.io
Now that Windjammer v0.36.2 has been published to crates.io, we can
use the proper installation method instead of building from source.

## Changes
- Updated all 3 CI jobs to install from crates.io
- Removed temporary workaround of building from fix branch
- Clean, simple: `cargo install windjammer --version 0.36.2`

## What's in v0.36.2
- ✅ Static factory methods work correctly (no implicit &self)
- ✅ Builder patterns work correctly (mut self instead of &mut self)
- ✅ Parameter shadowing fixed
- ✅ All 49 windjammer-ui components compile successfully

## Impact
- ✅ CI is now clean and maintainable
- ✅ Uses official published version
- ✅ Ready for windjammer-ui v0.1.1 release

Related: windjammer v0.36.2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,14 +43,9 @@ jobs:
       - name: Install Windjammer CLI
         shell: bash
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
-          # Clone windjammer repo and build from fix branch to get static method fix
-          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
-          cd /tmp/windjammer
-          cargo build --release
-          # Install to cargo bin directory
-          cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
+          echo "📦 Installing Windjammer CLI v0.36.2..."
+          cargo install windjammer --version 0.36.2
+          echo "✅ Windjammer CLI installed"
           wj --version
       
       - name: Generate Cargo.lock if missing
@@ -109,14 +104,9 @@ jobs:
       
       - name: Install Windjammer CLI
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
-          # Clone windjammer repo and build from fix branch to get static method fix
-          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
-          cd /tmp/windjammer
-          cargo build --release
-          # Install to cargo bin directory
-          cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
+          echo "📦 Installing Windjammer CLI v0.36.2..."
+          cargo install windjammer --version 0.36.2
+          echo "✅ Windjammer CLI installed"
           wj --version
       
       - name: Install tarpaulin
@@ -177,14 +167,9 @@ jobs:
       
       - name: Install Windjammer CLI
         run: |
-          echo "📦 Installing Windjammer CLI (wj) from fix branch..."
-          # Clone windjammer repo and build from fix branch to get static method fix
-          git clone --branch fix/static-method-self-parameter https://github.com/jeffreyfriedman/windjammer.git /tmp/windjammer
-          cd /tmp/windjammer
-          cargo build --release
-          # Install to cargo bin directory
-          cp target/release/wj ~/.cargo/bin/
-          echo "✅ Windjammer CLI installed (from fix/static-method-self-parameter branch)"
+          echo "📦 Installing Windjammer CLI v0.36.2..."
+          cargo install windjammer --version 0.36.2
+          echo "✅ Windjammer CLI installed"
           wj --version
       
       - name: Cache Cargo registry and build artifacts
