--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,10 +81,26 @@ jobs:
       
       - name: Run clippy
         if: matrix.rust == 'stable'
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            # On Linux, skip desktop feature (requires display server)
+            cargo clippy --all-targets --features "web,wasm-bindgen" -- -D warnings
+          else
+            # On macOS/Windows, test all features
+            cargo clippy --all-targets --all-features -- -D warnings
+          fi
+        shell: bash
       
       - name: Run tests
-        run: cargo test --verbose --all-features
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            # On Linux, skip desktop feature (requires display server)
+            cargo test --verbose --features "web,wasm-bindgen"
+          else
+            # On macOS/Windows, test all features
+            cargo test --verbose --all-features
+          fi
+        shell: bash
       
       - name: Build release
         if: matrix.rust == 'stable'
