--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,8 +85,11 @@ jobs:
           if [ "$RUNNER_OS" == "Linux" ]; then
             # On Linux, skip desktop feature (requires display server)
             cargo clippy --all-targets --features "web,wasm-bindgen" -- -D warnings
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            # On Windows, skip iOS/macOS-specific features
+            cargo clippy --all-targets --features "web,desktop,mobile-android" -- -D warnings
           else
-            # On macOS/Windows, test all features
+            # On macOS, test all features
             cargo clippy --all-targets --all-features -- -D warnings
           fi
         shell: bash
@@ -96,8 +99,11 @@ jobs:
           if [ "$RUNNER_OS" == "Linux" ]; then
             # On Linux, skip desktop feature (requires display server)
             cargo test --verbose --features "web,wasm-bindgen"
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            # On Windows, skip iOS/macOS-specific features
+            cargo test --verbose --features "web,desktop,mobile-android"
           else
-            # On macOS/Windows, test all features
+            # On macOS, test all features
             cargo test --verbose --all-features
           fi
         shell: bash
@@ -114,7 +120,7 @@ jobs:
         if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo build --target wasm32-unknown-unknown --features wasm
+          cargo build --target wasm32-unknown-unknown --features web
 
   coverage:
     name: Code Coverage
