feat: windjammer-ui v0.2.0 - 10 new components
New Components (all in pure Windjammer):
- Stack, Form, FormField, Modal, Table, Timeline, Stepper, Loading, Chip, Rating

Build System:
- Added --no-cargo flag to build.rs
- Added windjammer CLI to GitHub Actions
- Added #![allow(clippy::all)] to generated files

Code Quality (Source-level fixes):
- Fixed needless_borrow, single_char_add_str, explicit_counter_loop, unused_variables

Known: noop_method_call warnings (AUTO-CLONE analyzer bug)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,6 +74,9 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
       
+      - name: Install Windjammer CLI
+        run: cargo install windjammer --locked
+      
       - name: Run tests before publish
         run: cargo test --all-features
       
