--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,33 +28,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Install Linux system dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libglib2.0-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libwebkit2gtk-4.1-dev \
-            libxdo-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
-      
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
           components: rustfmt, clippy
-      
-      - name: Install Windjammer CLI
-        shell: bash
-        run: |
-          echo "📦 Installing Windjammer CLI v0.36.2..."
-          cargo install windjammer --version 0.36.2
-          echo "✅ Windjammer CLI installed"
-          wj --version
       
       - name: Generate Cargo.lock if missing
         shell: bash
@@ -72,8 +50,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-
       
-      - name: Build
-        run: cargo build --verbose
+      - name: Install Windjammer CLI
+        run: cargo install windjammer --locked
       
       - name: Check formatting
         if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
@@ -81,46 +59,27 @@ jobs:
       
       - name: Run clippy
         if: matrix.rust == 'stable'
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            # On Linux, skip desktop feature (requires display server)
-            cargo clippy --all-targets --features "web,wasm-bindgen" -- -D warnings
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            # On Windows, skip iOS/macOS-specific features
-            cargo clippy --all-targets --features "web,desktop,mobile-android" -- -D warnings
-          else
-            # On macOS, test all features
-            cargo clippy --all-targets --all-features -- -D warnings
-          fi
-        shell: bash
+        run: cargo clippy --all-targets --all-features -- -D warnings
+      
+      - name: Build
+        run: cargo build --verbose
       
       - name: Run tests
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            # On Linux, skip desktop feature (requires display server)
-            cargo test --verbose --features "web,wasm-bindgen"
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            # On Windows, skip iOS/macOS-specific features
-            cargo test --verbose --features "web,desktop,mobile-android"
-          else
-            # On macOS, test all features
-            cargo test --verbose --all-features
-          fi
-        shell: bash
+        run: cargo test --verbose --all-features
       
       - name: Build release
         if: matrix.rust == 'stable'
         run: cargo build --release --verbose
       
       - name: Build with desktop feature
-        if: matrix.rust == 'stable' && runner.os == 'macOS'
+        if: matrix.rust == 'stable' && runner.os != 'Windows'
         run: cargo build --release --features desktop
       
       - name: Build for WASM target
         if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo build --target wasm32-unknown-unknown --features web
+          cargo build --target wasm32-unknown-unknown --features wasm
 
   coverage:
     name: Code Coverage
@@ -133,19 +92,13 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       
       - name: Install Windjammer CLI
-        run: |
-          echo "📦 Installing Windjammer CLI v0.36.2..."
-          cargo install windjammer --version 0.36.2
-          echo "✅ Windjammer CLI installed"
-          wj --version
+        run: cargo install windjammer --locked
       
       - name: Install tarpaulin
         run: cargo install cargo-tarpaulin
       
       - name: Generate coverage
-        run: |
-          # Skip desktop feature on Linux (requires display server)
-          cargo tarpaulin --verbose --features "web,wasm-bindgen" --workspace --timeout 120 --out xml
+        run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -198,11 +151,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       
       - name: Install Windjammer CLI
-        run: |
-          echo "📦 Installing Windjammer CLI v0.36.2..."
-          cargo install windjammer --version 0.36.2
-          echo "✅ Windjammer CLI installed"
-          wj --version
+        run: cargo install windjammer --locked
       
       - name: Cache Cargo registry and build artifacts
         uses: actions/cache@v4
@@ -216,17 +165,9 @@ jobs:
             ${{ runner.os }}-cargo-publish-
             ${{ runner.os }}-cargo-
       
-      - name: Dry-run publish windjammer-ui-macro
-        run: |
-          echo "🧪 Validating windjammer-ui-macro can be published..."
-          cargo publish --dry-run -p windjammer-ui-macro
-          echo "✅ windjammer-ui-macro is ready to publish!"
-      
-      - name: Dry-run publish windjammer-ui
+      - name: Dry-run publish
         run: |
           echo "🧪 Validating windjammer-ui can be published..."
-          echo "⚠️  Skipping windjammer-ui dry-run because it depends on unpublished windjammer-ui-macro"
-          echo "   This will be validated during actual publish after windjammer-ui-macro is live."
-          # cargo publish --dry-run  # Can't run until windjammer-ui-macro is on crates.io
-          echo "✅ windjammer-ui-macro dry-run passed - main package will be validated during release!"
+          cargo publish --dry-run
+          echo "✅ windjammer-ui is ready to publish!"
 
