--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,6 +91,11 @@ jobs:
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
       
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libglib2.0-dev libgtk-3-dev libjavascriptcoregtk-4.1-dev libwebkit2gtk-4.1-dev libxdo-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
+      
       - name: Install Windjammer CLI
         run: cargo install windjammer --locked
       
@@ -168,6 +173,11 @@ jobs:
       - name: Dry-run publish
         run: |
           echo "🧪 Validating windjammer-ui can be published..."
-          cargo publish --dry-run
+          # Publish macro crate first (dry-run)
+          cd windjammer-ui-macro
+          cargo publish --dry-run --allow-dirty
+          cd ..
+          # Then publish main crate (dry-run)
+          cargo publish --dry-run --allow-dirty
           echo "✅ windjammer-ui is ready to publish!"
 
