fix: simplify example tests and publish dry-run checks
**Example Tests:**
- Removed fallback logic - always use --no-run-cargo flag
- CI uses wj v0.37.2+ which has this flag
- Simpler, more reliable test code

**Publish Dry-Run:**
- Only validate windjammer-ui-macro can publish
- Main crate validation skipped because it depends on macro crate
- cargo publish --dry-run doesn't actually publish, so dependency
  resolution fails for the main crate
- Main crate will be validated during actual release workflow

This fixes the chicken-and-egg problem where we can't test publishing
a crate that depends on another unpublished crate.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -181,12 +181,12 @@ jobs:
       
       - name: Dry-run publish
         run: |
-          echo "🧪 Validating windjammer-ui can be published..."
-          # Publish macro crate first (dry-run)
+          echo "🧪 Validating windjammer-ui-macro can be published..."
+          # Only test macro crate since main crate depends on it
+          # (and dry-run doesn't actually publish, so dependency check would fail)
           cd windjammer-ui-macro
           cargo publish --dry-run --allow-dirty
           cd ..
-          # Then publish main crate (dry-run)
-          cargo publish --dry-run --allow-dirty
-          echo "✅ windjammer-ui is ready to publish!"
+          echo "✅ windjammer-ui-macro is ready to publish!"
+          echo "ℹ️  Main crate will be validated during actual release"
 
