--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,7 @@ jobs:
       
       - name: Install system dependencies
         run: |
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y \
             pkg-config \
             libglib2.0-dev \
@@ -104,12 +104,20 @@ jobs:
             libssl-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev
+          # Verify pkg-config can find the libraries
+          echo "Checking pkg-config..."
+          pkg-config --modversion glib-2.0 || echo "ERROR: glib-2.0 not found"
+          pkg-config --modversion gobject-2.0 || echo "ERROR: gobject-2.0 not found"
+          pkg-config --modversion gio-2.0 || echo "ERROR: gio-2.0 not found"
       
       - name: Install Windjammer CLI
         run: cargo install windjammer --locked
       
       - name: Install tarpaulin
         run: cargo install cargo-tarpaulin
+      
+      - name: Clean build artifacts
+        run: cargo clean
       
       - name: Generate coverage
         run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
