--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,7 +93,8 @@ jobs:
       
       - name: Install system dependencies
         run: |
-          sudo apt-get update -y
+          set -ex
+          sudo apt-get update
           sudo apt-get install -y \
             pkg-config \
             libglib2.0-dev \
@@ -104,11 +105,14 @@ jobs:
             libssl-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev
+          
           # Verify pkg-config can find the libraries
-          echo "Checking pkg-config..."
-          pkg-config --modversion glib-2.0 || echo "ERROR: glib-2.0 not found"
-          pkg-config --modversion gobject-2.0 || echo "ERROR: gobject-2.0 not found"
-          pkg-config --modversion gio-2.0 || echo "ERROR: gio-2.0 not found"
+          echo "=== Verifying pkg-config can find libraries ==="
+          pkg-config --modversion glib-2.0
+          pkg-config --modversion gobject-2.0
+          pkg-config --modversion gio-2.0
+          pkg-config --modversion gtk+-3.0
+          echo "=== All libraries found! ==="
       
       - name: Install Windjammer CLI
         run: cargo install windjammer --locked
