--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ js-sys = { version = "0.3", optional = true }
 
 # Desktop platform (eframe + egui)
 egui = { version = "0.29", optional = true }
-eframe = { version = "0.29", optional = true, default-features = false, features = ["wgpu"] }
+eframe = { version = "0.29", optional = true, default-features = false, features = ["wgpu", "x11", "wayland"] }
 egui_dock = { version = "0.14", optional = true }
 png = { version = "0.17", optional = true }
 
