fix: use platform-specific feature testing in CI
The --all-features flag on Linux was pulling in macOS-specific
dependencies (core-graphics-types) through the desktop feature,
causing compilation errors.

Solution: Use platform-specific feature testing:
- Linux: test with 'web' features only
- macOS/Windows: test with all features

The desktop feature is still tested separately on each platform
in the 'Build with desktop feature' step.

Error: 'link kind framework is only supported on Apple targets'

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,10 +77,22 @@ jobs:
       
       - name: Run clippy
         if: matrix.rust == 'stable'
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            # On Linux, test web features only (desktop has platform conflicts)
+            cargo clippy --all-targets --features web -- -D warnings
+          else
+            cargo clippy --all-targets --all-features -- -D warnings
+          fi
       
       - name: Run tests
-        run: cargo test --verbose --all-features
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            # On Linux, test web features only (desktop has platform conflicts)
+            cargo test --verbose --features web
+          else
+            cargo test --verbose --all-features
+          fi
       
       - name: Build release
         if: matrix.rust == 'stable'
