--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,7 +99,7 @@ jobs:
         run: cargo build --release --verbose
       
       - name: Build with desktop feature
-        if: matrix.rust == 'stable' && runner.os != 'Windows'
+        if: matrix.rust == 'stable' && runner.os == 'macOS'
         run: cargo build --release --features desktop
       
       - name: Build for WASM target
@@ -151,7 +151,7 @@ jobs:
         run: cargo clean
       
       - name: Generate coverage
-        run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
+        run: cargo tarpaulin --verbose --features web --workspace --timeout 120 --out xml
       
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
