fix: use correct feature name 'web' for WASM build (not 'wasm')
The WASM build step was using --features wasm, but the correct
feature name is 'web' (as defined in Cargo.toml).

Error: 'the package windjammer-ui does not contain this feature: wasm'
Help: 'there is a similarly named feature: web'

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,7 +106,7 @@ jobs:
         if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo build --target wasm32-unknown-unknown --features wasm
+          cargo build --target wasm32-unknown-unknown --features web
 
   coverage:
     name: Code Coverage
