fix: only use all-features on macOS, use web features on Linux/Windows
Windows was failing with core-foundation errors (macOS-only library)
when using --all-features, similar to the Linux winit issues.

The all-platforms feature set has platform-specific dependencies that
conflict when built on the wrong platform:
- Linux: winit needs X11/Wayland
- Windows: core-foundation is macOS-only
- macOS: works with all features

Solution: Only test all-features on macOS, use web features elsewhere.

Error: 'failed to resolve: could not find unix in os' (core-foundation)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,21 +75,21 @@ jobs:
         if: matrix.rust == 'stable' && matrix.os == 'ubuntu-latest'
         run: cargo fmt --all -- --check
       
-      - name: Run clippy (Linux)
-        if: matrix.rust == 'stable' && runner.os == 'Linux'
-        run: cargo clippy --all-targets --features web -- -D warnings
-      
-      - name: Run clippy (macOS/Windows)
-        if: matrix.rust == 'stable' && runner.os != 'Linux'
+      - name: Run clippy (macOS)
+        if: matrix.rust == 'stable' && runner.os == 'macOS'
         run: cargo clippy --all-targets --all-features -- -D warnings
       
-      - name: Run tests (Linux)
-        if: runner.os == 'Linux'
-        run: cargo test --verbose --features web
+      - name: Run clippy (Linux/Windows)
+        if: matrix.rust == 'stable' && runner.os != 'macOS'
+        run: cargo clippy --all-targets --features web -- -D warnings
       
-      - name: Run tests (macOS/Windows)
-        if: runner.os != 'Linux'
+      - name: Run tests (macOS)
+        if: runner.os == 'macOS'
         run: cargo test --verbose --all-features
+      
+      - name: Run tests (Linux/Windows)
+        if: runner.os != 'macOS'
+        run: cargo test --verbose --features web
       
       - name: Build release
         if: matrix.rust == 'stable'
