--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,7 +69,17 @@ jobs:
       - name: Install Linux system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libglib2.0-dev
+          sudo apt-get install -y \
+            pkg-config \
+            libglib2.0-dev \
+            libgtk-3-dev \
+            libjavascriptcoregtk-4.1-dev \
+            libwebkit2gtk-4.1-dev \
+            libsoup-3.0-dev \
+            libxdo-dev \
+            libssl-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -78,7 +88,7 @@ jobs:
         run: cargo install windjammer --locked
       
       - name: Run tests before publish
-        run: cargo test --all-features
+        run: cargo test --features web
       
       - name: Publish windjammer-ui-macro first
         run: cargo publish --token ${{ secrets.CARGO_TOKEN }} -p windjammer-ui-macro
