fix: add CARGO_TOKEN verification to release workflow
The publish step was failing with 'a value is required for --token' error,
indicating the CARGO_TOKEN secret might not be set or accessible.

Changes:
- Added environment declaration for crates-io
- Added verification step to check if CARGO_TOKEN is set before publishing
- Provides clear error message if token is missing

This will help diagnose whether the issue is:
1. Secret not set in repository settings
2. Secret not accessible to workflow
3. Secret value is empty/malformed

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,8 @@ jobs:
     name: Publish to crates.io
     needs: [validate-version, create-release]
     runs-on: ubuntu-latest
+    environment:
+      name: crates-io
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -89,6 +91,15 @@ jobs:
       
       - name: Run tests before publish
         run: cargo test --features web
+      
+      - name: Verify CARGO_TOKEN is set
+        run: |
+          if [ -z "${{ secrets.CARGO_TOKEN }}" ]; then
+            echo "❌ ERROR: CARGO_TOKEN secret is not set"
+            echo "Please add CARGO_TOKEN to repository secrets"
+            exit 1
+          fi
+          echo "✅ CARGO_TOKEN is set"
       
       - name: Publish windjammer-ui-macro first
         run: cargo publish --token ${{ secrets.CARGO_TOKEN }} -p windjammer-ui-macro
