--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,8 +62,6 @@ jobs:
     name: Publish to crates.io
     needs: [validate-version, create-release]
     runs-on: ubuntu-latest
-    environment:
-      name: crates-io
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -92,23 +90,18 @@ jobs:
       - name: Run tests before publish
         run: cargo test --features web
       
-      - name: Verify CARGO_TOKEN is set
-        run: |
-          if [ -z "${{ secrets.CARGO_TOKEN }}" ]; then
-            echo "❌ ERROR: CARGO_TOKEN secret is not set"
-            echo "Please add CARGO_TOKEN to repository secrets"
-            exit 1
-          fi
-          echo "✅ CARGO_TOKEN is set"
-      
       - name: Publish windjammer-ui-macro first
-        run: cargo publish --token ${{ secrets.CARGO_TOKEN }} -p windjammer-ui-macro
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
+        run: cargo publish -p windjammer-ui-macro
         continue-on-error: true  # May already be published
       
       - name: Wait for crates.io to index
         run: sleep 30
       
       - name: Publish windjammer-ui
-        run: cargo publish --token ${{ secrets.CARGO_TOKEN }}
-        continue-on-error: false
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
+        run: cargo publish
+        continue-on-error: true  # Don't fail if already published
 
