--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to publish (e.g., 0.2.2)'
+        required: true
+        type: string
 
 env:
   CARGO_TERM_COLOR: always
@@ -91,17 +97,13 @@ jobs:
         run: cargo test --features web
       
       - name: Publish windjammer-ui-macro first
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
-        run: cargo publish -p windjammer-ui-macro
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} -p windjammer-ui-macro
         continue-on-error: true  # May already be published
       
       - name: Wait for crates.io to index
         run: sleep 30
       
       - name: Publish windjammer-ui
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
-        run: cargo publish
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
         continue-on-error: true  # Don't fail if already published
 
