chore: clean up root directory
Moved documentation and release notes to proper locations:
- Release notes: docs/releases/
- Other docs: docs/

Removed temporary/test files from root:
- serve_*.wj
- test_builder_pattern.wj
- simple_app.html
- todo_app.html

Updated .gitignore to prevent future root directory pollution.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ build/Cargo.toml
 *.tmp
 tmp/
 .pr-comments/
+
+# Keep root directory clean - no test/example files in root
+/*.wj
+/*.html
+/*_test.*
+/*_demo.*
+/*_example.*
+/serve_*
+/simple_*
+/test_*
