--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,13 +97,13 @@ jobs:
         run: cargo test --features web
       
       - name: Publish windjammer-ui-macro first
-        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} -p windjammer-ui-macro
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} -p windjammer-ui-macro --allow-dirty
         continue-on-error: true  # May already be published
       
       - name: Wait for crates.io to index
         run: sleep 30
       
       - name: Publish windjammer-ui
-        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }} --allow-dirty
         continue-on-error: true  # Don't fail if already published
 
