Add Windjammer v0.38.3+ version requirement
- Added version check in build.rs to require v0.38.3+
- Updated CI to install Windjammer v0.38.3+
- Added helpful error messages for version mismatches

This ensures the trait implementation visibility fixes are available
before transpiling components.

Note: CI will fail until Windjammer v0.38.3 is published to crates.io.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
             librsvg2-dev
       
       - name: Install Windjammer CLI
-        run: cargo install windjammer --locked
+        run: cargo install windjammer --version ^0.38.3 --locked
       
       - name: Build
         run: cargo build --verbose
