--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,18 @@ documentation.workspace = true
 description = "Cross-platform UI framework for Windjammer (Web, Desktop, Mobile)"
 keywords = ["ui", "framework", "cross-platform", "wasm", "tauri"]
 categories = ["gui", "web-programming", "wasm"]
+# Explicitly include generated files (they're committed to git for cargo publish)
+include = [
+    "src/**/*",
+    "examples/**/*",
+    "tests/**/*",
+    "benches/**/*",
+    "build.rs",
+    "Cargo.toml",
+    "README.md",
+    "LICENSE-MIT",
+    "LICENSE-APACHE",
+]
 
 [lib]
 name = "windjammer_ui"
