--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ build/Cargo.toml
 
 # Exclude nested directories created by disabled lib.rs
 src/components/generated/components/
-src/components/generated/platform/
 src/components/generated/lib/
+# Note: platform/ is hand-written, not generated, so it's NOT excluded
 
 # IDE
 .vscode/
