--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,31 +31,13 @@ jobs:
           cargo fmt --all -- --check
           echo "✅ Formatting check passed"
       
-      - name: Run clippy (web features)
+      - name: Run clippy (web features only)
         run: |
           echo "🔎 Running clippy with web features..."
+          echo "Note: Desktop features skipped in quality-checks due to winit/egui headless limitations"
+          echo "Desktop clippy is checked in platform-specific test jobs"
           cargo clippy --lib --tests --features web -- -D warnings
           echo "✅ Clippy passed (web)"
-      
-      - name: Install system dependencies (for desktop clippy)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            pkg-config \
-            libglib2.0-dev \
-            libgtk-3-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libwebkit2gtk-4.1-dev \
-            libxdo-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev
-      
-      - name: Run clippy (all features)
-        run: |
-          echo "🔎 Running clippy with all features..."
-          cargo clippy --lib --tests --all-features -- -D warnings
-          echo "✅ Clippy passed (all features)"
 
   # Version consistency check (fast, independent)
   version-check:
