fix: Remove duplicate app/examples_wasm declarations (compiler bug workaround)
Problem:
--------
Wasm32 compilation failing with 'symbol run_interactive_counter is already defined'.
Both src/examples_wasm.rs and src/components/generated/examples_wasm.rs existed,
causing duplicate symbol definitions.

Root Cause:
-----------
The Windjammer compiler incorrectly discovers top-level modules (app, examples_wasm)
from src/lib.rs and adds them to src/components/generated/mod.rs.

These are hand-written files in src/, declared in src/lib.rs, NOT generated
components. They should not be in the generated directory at all.

Solution (Temporary Workaround):
--------------------------------
1. Deleted app.rs and examples_wasm.rs from src/components/generated/
2. Added them to .gitignore to prevent re-copying
3. Commented out their module declarations in generated mod.rs with COMPILER BUG note

This is a temporary workaround. The proper fix requires updating the compiler's
module discovery logic to not include top-level modules when generating
src/components/generated/mod.rs.

Files Changed:
--------------
- .gitignore (added generated app.rs, examples_wasm.rs)
- src/components/generated/mod.rs (commented out incorrect declarations)
- Deleted: src/components/generated/app.rs
- Deleted: src/components/generated/examples_wasm.rs

Test: cargo build --target wasm32-unknown-unknown --lib --release
Result: ✅ PASSING

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ src/components/generated/components/
 src/components/generated/lib/
 # Note: platform/ is hand-written, not generated, so it's NOT excluded
 
+# Exclude hand-written files incorrectly copied by compiler
+src/components/generated/app.rs
+src/components/generated/examples_wasm.rs
+
 # IDE
 .vscode/
 .idea/
